fixed overlap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,8 +30,9 @@
   display: inline-block;
   background-image: url({{ site.baseurl }}{{ site.logopath }});
   background-size: 100% 100%;
-  width: 100%;
+  width: 80%;
   height: 0;
-  padding-bottom: 100%;
+  padding-bottom: 70%;
+  margin-left: 10%;
   vertical-align: middle;
 }
